# kookaburra

./: .coveragerc  .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package-lock.json  pyproject.toml  setup.cfg  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 20230216044007_a1b4a9c75700_init.py  20230218204506_838e67bebc6a_add_llms.py  20230220195158_44f6e638eb9e_init.py  20230220195558_0f701218a691_json_type.py  20230220220801_55ab864e94d1_add_waitlisted.py
kookaburra/: __init__.py  api.py  auth.py  const.py  db.py  deployment.py  exc.py  gh.py  gs.py  gunicorn_conf.py  llm.py  log.py  main.py  models.py  settings.py  twilio.py  types.py  user.py  utils.py  views.py
kookaburra_deployment/: _modal.py  main.py
scripts/: build-tailwind.sh  clean-up-modal.py  deploy.sh  docker-build.sh  docker-push.sh  docker-run.sh  format.sh  gcloud-beta-run-deploy.sh  install-tailwind.sh  install.sh  lint.sh  make-gh-actions-id-pool.sh  make-gh-secret-env-prod.sh  psql-prod.sh  run-cloud-sql-proxy.sh  run-gunicorn.sh  run-postgres.sh  run-uvicorn.sh  test.sh
static/css/: input.css  tailwind.css
templates/: 404.html  _foot.html  _head.html  _home.html  _index_nav.html  _signup.html  base.html  index.html
tests/: conftest.py  mocks.py  test_auth.py  test_gh_webhook.py  test_gunicorn_conf.py  test_health.py  test_llms.py  test_log.py  test_sms.py  test_version.py  test_views.py
