[build-system]
requires = [
    "setuptools >=65.0",
    "wheel >=0.36.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "kookaburra"
dynamic = ["version"]
description = "kookaburra"
readme = "README.md"
license = {text = "See LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "fastapi >=0.80.0",
    "python-dotenv >=0.21.1",
    "uvicorn >=0.15.0",
    "gunicorn >=20.1.0",
    "langchain >=0.0.80",
    "openai >=0.11.0",
    "twilio >=6.63.0",
    "authlib >=0.15.5",
    "httpx >=0.23.1",
    "email-validator >=1.1.3",
    "sqlmodel >=0.0.5",
    "alembic >=1.9.0",
    "python-dateutil >=2.8.2",
    "asyncpg >=0.27.0",
    "PyGithub >=1.57",
    "itsdangerous >=2.0.1",
    "python-multipart >=0.0.5",
    "modal-client >=0.46.0",
    "GitPython >=3.1.24",
    "jwt >=1.3.0",
    "sh >=1.14.2",
    "jinja2 >=3.1.2",
]
[[project.authors]]
name = "Anthony Corletti"
email = "anthcor@gmail.com"
[[project.authors]]
name = "Vaibhav Viswanathan"
email = "vaibhavviswanathan@gmail.com"


[project.optional-dependencies]
test = [
    "pytest >=6.2.5",
    "coverage >=6.1.1",
    "pytest-cov >=3.0.0",
    "greenlet >=1.1.2",
    "pytest-asyncio >=0.20.3",
]
dev = [
    "mypy <1.1.1", # https://github.com/pydantic/pydantic/issues/5190
    "black >=21.10b0",
    "ruff >=0.0.98",
    "pre-commit >=2.17.0",
]

[project.urls]
Home = "https://github.com/kookaburracodes/kookaburra"
Documentation = "https://docs.kookaburra.codes"

[tool.setuptools.dynamic]
version = {attr = "kookaburra.__version__"}

[tool.ruff]
line-length = 88
ignore = [
    "D10",
]
target-version = "py310"
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "D415",
]
